# QT-Simple-Exercise

./: CMakeLists.txt  README.md  main.cpp  person.cpp  person.hpp  timer.cpp  timer.hpp
